GG-32303 WIP fixed bug with a double setting new partition size. Added new tests.